# airdrop-rs

./: .env  .gitignore  bun.lockb  package.json  rsbuild.config.ts  tsconfig.json
public/: index.html
src/: App.tsx  env.d.ts  index.tsx  rootContext.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: config.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: chrome_app.rs  config.rs  mod.rs  open.rs  webshare.rs
src-tauri/src/utils/: mod.rs
src/pages/chrome/: columns.tsx  index.tsx
src/pages/chrome/components/: Close.tsx  Open.tsx
src/pages/chrome/components/config/: Index.tsx  IpAuth.tsx  ProxyConfig.tsx  UrlConfig.tsx  WalletConfig.tsx
src/pages/chrome_app/: index.tsx
src/pages/setting/: index.tsx
src/types/: globa.d.ts
