[package]
name = "airdrop"
version = "0.1.0"
description = "more chrome"
authors = ["hsy"]
edition = "2024"

[lib]
name = "airdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
fs_extra = "1.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sysinfo = {version = "0.37"}
winreg = { version = "0.55" }
